code/force-app/main/default/objects/FinServ__BillingStatement__c/fields/FinServ__BalanceTransfers__c.field-meta.xml
<CustomField>
    <fullName>FinServ__BalanceTransfers__c</fullName>
    <label>Balance Transfers</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>