code/force-app/main/default/objects/FinServ__BillingStatement__c/fields/FinServ__BillingPeriodEnd__c.field-meta.xml
<CustomField>
    <fullName>FinServ__BillingPeriodEnd__c</fullName>
    <label>Billing Period End</label>
    <type>Date</type>
</CustomField>