code/force-app/main/default/objects/FinServ__BillingStatement__c/fields/FinServ__BillingPeriodStart__c.field-meta.xml
<CustomField>
    <fullName>FinServ__BillingPeriodStart__c</fullName>
    <label>Billing Period Start</label>
    <type>Date</type>
</CustomField>