code/force-app/main/default/objects/FinServ__BillingStatement__c/fields/FinServ__CashAdvances__c.field-meta.xml
<CustomField>
    <fullName>FinServ__CashAdvances__c</fullName>
    <label>Cash Advances</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>