code/force-app/main/default/objects/FinServ__BillingStatement__c/fields/FinServ__FeesCharged__c.field-meta.xml
<CustomField>
    <fullName>FinServ__FeesCharged__c</fullName>
    <label>Fees Charged</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>