code/force-app/main/default/objects/FinServ__BillingStatement__c/fields/FinServ__InterestYTD__c.field-meta.xml
<CustomField>
    <fullName>FinServ__InterestYTD__c</fullName>
    <label>Interest YTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>