code/force-app/main/default/objects/FinServ__BillingStatement__c/fields/FinServ__LastPaymentDate__c.field-meta.xml
<CustomField>
    <fullName>FinServ__LastPaymentDate__c</fullName>
    <label>Last Payment Date</label>
    <type>Date</type>
</CustomField>