code/force-app/main/default/objects/FinServ__BillingStatement__c/fields/FinServ__MinimumPaymentDue__c.field-meta.xml
<CustomField>
    <fullName>FinServ__MinimumPaymentDue__c</fullName>
    <description>Minimum payment due</description>
    <label>Minimum Payment Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>