code/force-app/main/default/objects/FinServ__BillingStatement__c/fields/FinServ__PastDueAmount__c.field-meta.xml
<CustomField>
    <fullName>FinServ__PastDueAmount__c</fullName>
    <description>Total amount due at the end of the billing period</description>
    <label>Past Due Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>