code/force-app/main/default/objects/FinServ__BillingStatement__c/fields/FinServ__Payments__c.field-meta.xml
<CustomField>
    <fullName>FinServ__Payments__c</fullName>
    <description>Payments received since the last statement.</description>
    <label>Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>