code/force-app/main/default/objects/FinServ__BillingStatement__c/fields/FinServ__Purchases__c.field-meta.xml
<CustomField>
    <fullName>FinServ__Purchases__c</fullName>
    <label>Purchases</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>