code/force-app/main/default/objects/FinServ__BillingStatement__c/fields/FinServ__StatementDate__c.field-meta.xml
<CustomField>
    <fullName>FinServ__StatementDate__c</fullName>
    <label>Statement Date</label>
    <type>Date</type>
</CustomField>